Update workflow. add `set -e`

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -17,5 +17,20 @@ jobs:
     - name: copy
       run : |
         cp -r ${GITHUB_WORKSPACE} ~/
+
+    - name: run
+      run: |
         cd ~/dotfiles
         make run
+
+    - name Load .zprofile
+      run: |
+        zsh ~/.zprofile 2> /tmp/dotfiles/.zprofile.error.log
+        cat /tmp/dotfiles/.zprofile.error.log
+        if [ -s /tmp/dotfiles/.zprofile.error.log ]; then false; fi
+
+    - name Load .zshrc
+      run: |
+        zsh ~/.zshrc 2> /tmp/dotfiles/.zshrc.error.log
+        cat /tmp/dotfiles/.zshrc.error.log
+        if [ -s /tmp/dotfiles/.zshrc.error.log ]; then false; fi
