Fix. touch error.log

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -17,13 +17,16 @@ jobs:
     - name: copy
       run : |
         cp -r ${GITHUB_WORKSPACE} ~/
+
     - name: remove ACL
       run : |
         chmod -N "/Volumes/Macintosh HD/Users/runner"
         chmod -N "/Volumes/Macintosh HD/Users/runner/.config"
+
     - name: unlink node@12
       run : |
         brew unlink node@12
+
     - name: run
       run : |
         cd ~/dotfiles
@@ -31,12 +34,15 @@ jobs:
 
     - name: Load .zprofile
       run : |
-        zsh ~/.zprofile 2> /tmp/dotfiles/.zprofile.error.log
-        cat /tmp/dotfiles/.zprofile.error.log
-        if [ -s /tmp/dotfiles/.zprofile.error.log ]; then false; fi
+        touch error.log
+        zsh ~/.zprofile 2> error.log
+        cat error.log
+        if [ -s error.log ]; then false; fi
 
     - name: Load .zshrc
       run : |
-        zsh ~/.zshrc 2> /tmp/dotfiles/.zshrc.error.log
-        cat /tmp/dotfiles/.zshrc.error.log
-        if [ -s /tmp/dotfiles/.zshrc.error.log ]; then false; fi
+        touch error.log
+        zsh ~/.zshrc 2> error.log
+        cat error.log
+        if [ -s error.log ]; then false; fi
+
