Add `make brew-dump`

--- a/etc/brewfile
+++ b/etc/brewfile
@@ -1,31 +1,31 @@
-# This file doesn't pass CI
-
 tap "heroku/brew"
 tap "homebrew/cask"
 tap "homebrew/cask-drivers"
 tap "homebrew/cask-fonts"
-
 brew "anyenv"
 brew "awscli"
 brew "bash-completion"
 brew "python"
 brew "direnv"
 brew "docker", link: false
+brew "exa"
 brew "ffmpeg"
 brew "git"
 brew "go"
 brew "lynx"
 brew "mas"
+brew "micro"
 brew "mono"
 brew "mysql"
 brew "nkf"
 brew "nmap"
 brew "node"
 brew "postgresql"
+brew "shellcheck"
+brew "swi-prolog"
 brew "telnet"
 brew "tree"
 brew "heroku/brew/heroku"
-
 cask "bitwarden"
 cask "cheatsheet"
 cask "docker"
@@ -33,23 +33,18 @@ cask "dropbox"
 cask "firefox"
 cask "font-hackgen"
 cask "fujitsu-scansnap-home"
+cask "google-backup-and-sync"
 cask "google-japanese-ime"
 cask "hyper"
 cask "karabiner-elements"
+cask "vagrant"
 cask "virtualbox"
 cask "virtualbox-extension-pack"
-cask "vagrant"
-cask "slack"
-cask "gimp"
-cask "google-chrome"
-cask "postman"
-cask "skype"
-cask "visual-studio-code"
-cask "kindle"
-
 mas "ForkLift", id: 412448059
+mas "GarageBand", id: 682658836
 mas "iMovie", id: 408981434
 mas "Keynote", id: 409183694
+mas "Kindle", id: 405399194
 mas "LINE", id: 539883307
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
