shellcheck > zsh -n (shellcheck is not supported to zsh)

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -19,12 +19,11 @@ jobs:
     - name: Check bin/*.sh
       run : shellcheck ${GITHUB_WORKSPACE}/bin/*.sh
 
-    # SC2148 ... shebangが無いときの警告
     - name: Check .zprofile
-      run : shellcheck ${GITHUB_WORKSPACE}/.zprofile --exclude=SC2148
+      run : zsh -n ${GITHUB_WORKSPACE}/.zprofile
 
     - name: Check .zshrc
-      run : shellcheck ${GITHUB_WORKSPACE}/.zshrc --exclude=SC2148
+      run : zsh -n ${GITHUB_WORKSPACE}/.zshrc
 
   macos-setup:
     runs-on: macos-latest
