Add to Skip chsh

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
     - name: Run
       run : |
         cd ~/dotfiles
+        export SKIP_ZSH_INIT=1
         sudo make run
 
     # Use error.log. Not be able to use 'set -e' in .zprofile
@@ -78,6 +79,7 @@ jobs:
       run : |
         cd ~/dotfiles
         export BREW_BUNDLE_CORE_ONLY=1
+        export SKIP_ZSH_INIT=1
         make run
 
     # Use error.log. Not be able to use 'set -e' in .zprofile
