--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
     - name: Run
       run : |
         cd ~/dotfiles
+        export INSTALL_PACKAGES_CORE_ONLY=1
         export SKIP_ZSH_INIT=1
         sudo make run
 
@@ -78,7 +79,7 @@ jobs:
     - name: Run
       run : |
         cd ~/dotfiles
-        export BREW_BUNDLE_CORE_ONLY=1
+        export INSTALL_PACKAGES_CORE_ONLY=1
         export SKIP_ZSH_INIT=1
         make run
 
