Fix to load environment variables in sudo

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,11 +39,12 @@ jobs:
         cp -r ${GITHUB_WORKSPACE} ~/
 
     - name: Run
-      run : |
-        cd ~/dotfiles
-        export INSTALL_PACKAGES_CORE_ONLY=1
-        export SKIP_ZSH_INIT=1
-        sudo make run
+      run : >
+        cd ~/dotfiles &&
+        sudo bash -c '
+        export INSTALL_PACKAGES_CORE_ONLY=1 &&
+        export SKIP_ZSH_INIT=1 &&
+        make run'
 
     # Use error.log. Not be able to use 'set -e' in .zprofile
     - name: Load .zprofile
