--- a/.github/workflows/ubuntu-all.yml
+++ b/.github/workflows/ubuntu-all.yml
@@ -4,9 +4,11 @@ on:
   push:
     paths:
     - 'bin/packages-init-linux/**'
+    branches: [ master ]
   pull_request:
     paths:
     - 'bin/packages-init-linux/**'
+    branches: [ master ]
 
 jobs:
   ubuntu-setup:
