--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Run
       run : |
         cd ~/dotfiles
-
+        export HOMEBREW_BUNDLE_CASK_SKIP="vagrant virtualbox virtualbox-extension-pack"
         export HOMEBREW_BUNDLE_MAS_SKIP="$(bash ~/dotfiles/bin/print-mas-packages.sh)"
         export SKIP_ZSH_INIT=1
         make
