--- a/dein/dein.toml
+++ b/dein/dein.toml
@@ -93,3 +93,10 @@ hook_add = '''
   " difinitionをポップアップウィンドウで表示
   nnoremap [lsp]d :<C-u>LspPeekDefinition<CR>
 '''
+# git clone https://github.com/apple/sourcekit-lsp.git
+# cd sourcekit-lsp
+# swift build -c release
+# mv .build/release/sourcekit-lsp /usr/local/bin
+[[plugins]]
+repo = 'ryanolsonx/vim-lsp-swift'
+depends = ['async.vim', 'asyncomplete.vim', 'asyncomplete-lsp.vim', 'vim-lsp']
