--- a/etc/Brewfile
+++ b/etc/Brewfile
@@ -4,26 +4,27 @@ tap "homebrew/cask"
 tap "homebrew/cask-drivers"
 tap "homebrew/cask-fonts"
 tap "homebrew/core"
-brew "python"
+brew "colordiff"
 brew "direnv"
 brew "docker", link: false
 brew "ffmpeg"
 brew "figlet"
 brew "git"
 brew "go"
+brew "hugo"
 brew "lynx"
 brew "mas"
 brew "mysql"
 brew "nkf"
 brew "nmap"
 brew "node"
+brew "python"
 brew "shellcheck"
 brew "telnet"
 brew "tree"
 brew "vim"
 brew "yarn"
 brew "heroku/brew/heroku"
-brew "colordiff"
 cask "bitwarden"
 cask "cheatsheet"
 cask "docker"
@@ -32,6 +33,8 @@ cask "firefox"
 cask "font-hackgen"
 cask "fujitsu-scansnap-home"
 cask "gimp"
+cask "google-chrome"
+cask "google-earth-pro"
 cask "google-japanese-ime"
 cask "hyper"
 cask "karabiner-elements"
@@ -41,10 +44,10 @@ cask "shiftit"
 cask "skype"
 cask "slack"
 cask "vagrant"
-cask "virtualbox"
-cask "virtualbox-extension-pack"
 cask "visual-studio-code"
 cask "zoomus"
+cask "virtualbox"
+cask "virtualbox-extension-pack"
 mas "ForkLift", id: 412448059
 mas "iMovie", id: 408981434
 mas "LINE", id: 539883307
