--- a/.config/yarn/global/package.json
+++ b/.config/yarn/global/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@vue/cli": "^4.0.5",
     "create-nuxt-app": "^2.10.1",
+    "piping-server": "^1.0.0",
     "typescript": "^3.8.3",
     "typescript-language-server": "^0.4.0"
   }
