--- a/.config/yarn/global/package.json
+++ b/.config/yarn/global/package.json
@@ -2,6 +2,10 @@
   "dependencies": {
     "@vue/cli": "^4.0.5",
     "create-nuxt-app": "^2.10.1",
+    "fixpack": "^3.0.6",
+    "gimonfu": "^0.0.1",
+    "great-todo-cli": "^1.0.5",
+    "now": "^19.0.1",
     "piping-server": "^1.0.0",
     "typescript": "^3.8.3",
     "typescript-language-server": "^0.4.0"
