--- a/.config/yarn/global/package.json
+++ b/.config/yarn/global/package.json
@@ -4,6 +4,7 @@
     "create-nuxt-app": "^2.10.1",
     "fixpack": "^3.0.6",
     "gimonfu": "^0.0.1",
+    "md-to-pdf": "^3.1.1",
     "now": "^19.0.1",
     "piping-server": "^1.0.0",
     "typescript": "^3.8.3",
