--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -21,6 +21,7 @@ jobs:
       run : >
         cd ~/dotfiles &&
         sudo bash -c '
+        export CI="true" &&
         make &&
         make packages
         '
