Update .tmux.conf to rename window to current directory

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,6 +35,12 @@ set-option -g status-right '%Y-%m-%d(%a) %H:%M:%S'
 # ステータスバーを1秒毎に描画し直す
 set-option -g status-interval 1
 
+# ウィンドウ名を、zshのときだけカレントディレクトリ名にする
+# https://qiita.com/frnfnts/items/e9e55448e66d5b2df340
+set -g automatic-rename on
+set -g window-status-format         '#I:#{?#{m:#W,zsh},#(basename #{pane_current_path}),#W}#F'
+set -g window-status-current-format '#I:#{?#{m:#W,zsh},#(basename #{pane_current_path}),#W}#F'
+
 
 ## --------------------マウス--------------------
 
