--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,7 @@
 # This is Git's per-user configuration file.
 [include]
         path = ~/.gitconfig-private
-[includeIf "gitdir:~/dev/github.com/**"]
+[includeIf "gitdir:~/src/github.com/**"]
         path = ~/.gitconfig-user-public
 [filter "lfs"]
         required = true
