--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,6 +24,6 @@ jobs:
     - name: Check .zprofile
       run : zsh -n ${GITHUB_WORKSPACE}/.zprofile
 
-    - name: Check .zshrc
-      run : zsh -n ${GITHUB_WORKSPACE}/.zshrc
+    - name: Check '.zshrc*'
+      run : find ${GITHUB_WORKSPACE} -type f | grep -E "zshrc" | xargs shellcheck
 
