--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Run
       run : >
-        cd ~/src/github.com/yammerjp
+        cd ~/src/github.com/yammerjp/dotfiles
         make link
         make setup
 
