--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -27,7 +27,7 @@ jobs:
       run : |
         cd ~/src/github.com/yammerjp/dotfiles
         make link
-        echo 'brew vim"' >> ~/.Brewfile
+        echo 'brew "vim"' >> ~/.Brewfile
         sed -i '' '/^cask /d' ~/.Brewfile
         sed -i '' '/^mas /d' ~/.Brewfile
         make setup
