--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -20,9 +20,9 @@ jobs:
 
     - name: Run
       run : |
-        cd ~/src/github.com/yammerjp/dotfiles
-        make link
-        make setup
+        cd ~/src/github.com/yammerjp/dotfiles/bin
+        ./dotfiles link
+        ./dotfiles setup
 
     # Use error.log. Not be able to use 'set -e' in .zprofile
     - name: Load .zprofile
