--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -25,18 +25,18 @@ jobs:
         ./dotfiles setup
 
     # Use error.log. Not be able to use 'set -e' in .zprofile
-    - name: Load .zprofile
-      run : |
-        touch error.log
-        zsh ~/.zprofile 2> error.log
-        cat error.log
-        if [ -s error.log ]; then false; fi
+    # - name: Load .zprofile
+    #   run : |
+    #     touch error.log
+    #     zsh ~/.zprofile 2> error.log
+    #     cat error.log
+    #     if [ -s error.log ]; then false; fi
 
     # Use error.log. Not be able to use 'set -e' in .zshrc
-    - name: Load .zshrc
-      run : |
-        touch error.log
-        zsh ~/.zshrc 2> error.log
-        cat error.log
-        if [ -s error.log ]; then false; fi
+    # - name: Load .zshrc
+    #   run : |
+    #     touch error.log
+    #     zsh ~/.zshrc 2> error.log
+    #     cat error.log
+    #     if [ -s error.log ]; then false; fi
 
