--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -22,15 +22,20 @@ jobs:
     #- name: Unlink node@12
     #  run : |
     #    brew unlink node@12
+    - name: Install dependencies
+      run : |
+        brew install awk
+
+    - name: Mask .Brewfile
+      run : |
+        echo 'brew "vim"' >> ~/src/github.com/yammerjp/dotfiles/env/Darwin--x86_64/.Brewfile
+        sed -i '' '/^cask /d' ~/src/github.com/yammerjp/dotfiles/env/Darwin--x86_64/.Brewfile
+        sed -i '' '/^mas /d' ~/src/github.com/yammerjp/dotfiles/env/Darwin--x86_64/.Brewfile
 
     - name: Run
       run : |
         cd ~/src/github.com/yammerjp/dotfiles/bin
         ./dotfiles link
-        echo 'brew "vim"' >> ~/.Brewfile
-        sed -i '' '/^cask /d' ~/.Brewfile
-        sed -i '' '/^mas /d' ~/.Brewfile
-        brew install awk
         ./dotfiles setup
 
     # Use error.log. Not be able to use 'set -e' in .zprofile
