--- a/env/common/.config/git/config
+++ b/env/common/.config/git/config
@@ -2,6 +2,8 @@
 [user]
         name = Keisuke Nakayama
         email = me@yammer.jp
+[include]
+        path = ~/.config/git/config-company
 [filter "lfs"]
         required = true
         clean = git-lfs clean -- %f
@@ -24,7 +26,7 @@
         diflog = log -p
         s = status --short
         tree = ls-tree -r master --name-only
-        alias = "!cat ~/.gitconfig-common | sed '1,/\\[alias]/d;'"
+        alias = "!git config --list | grep -e '^alias' | sed -e 's/alias\\.//' -e 's/=/\\t\\t/'"
         als = alias
         rao = "!sh -c  '[ \"$1\" != \"\" ] && [ \"$2\" != \"\" ] && git remote add origin git@github.com:$1/$2.git' -"
         remote-add-origin =arog
@@ -34,4 +36,3 @@
         latest-merged-commit = "!git log --oneline | grep -E '^[0-9a-z]+ Merge pull request #' | head -1 | awk '{print $1}'"
         open-editing = "!bash -c 'git diff --name-only `git latest-merged-commit` | cat | xargs code'"
         oe = "open-editing"
-
