--- a/env/common/.config/git/config
+++ b/env/common/.config/git/config
@@ -36,3 +36,4 @@
         latest-merged-commit = "!git log --oneline | grep -E '^[0-9a-z]+ Merge pull request #' | head -1 | awk '{print $1}'"
         open-editing = "!bash -c 'git diff --name-only `git latest-merged-commit` | cat | xargs code'"
         oe = "open-editing"
+  r = "!git reflog -n 50 --pretty='format:%gs' | perl -anal -e '$seen{$1}++ or print $1 if /checkout:.*to (.+)/'"
