--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Run
       run : |
-        cd ~/src/github.com/yammerjp/dotfiles/bin
+        cd ~/src/github.com/yammerjp/dotfiles/.bin
         ./dotfiles link
         ./dotfiles setup
 
