Fix workflow for `mv env/common/* ./`

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -15,9 +15,9 @@ jobs:
 
     - name: Mask Homebrew package list
       run : |
-        echo 'brew "vim"' >>  ${GITHUB_WORKSPACE}/env/common/.config/homebrew/package-list-darwin-x86_64
-        sed -i '' '/^cask /d' ${GITHUB_WORKSPACE}/env/common/.config/homebrew/package-list-darwin-x86_64
-        sed -i '' '/^mas /d'  ${GITHUB_WORKSPACE}/env/common/.config/homebrew/package-list-darwin-x86_64
+        echo 'brew "vim"' >>  ${GITHUB_WORKSPACE}/.config/homebrew/package-list-darwin-x86_64
+        sed -i '' '/^cask /d' ${GITHUB_WORKSPACE}/.config/homebrew/package-list-darwin-x86_64
+        sed -i '' '/^mas /d'  ${GITHUB_WORKSPACE}/.config/homebrew/package-list-darwin-x86_64
 
     - name: Copy
       run : |
