--- a/.config/git/config
+++ b/.config/git/config
@@ -28,13 +28,17 @@
         tree = ls-tree -r master --name-only
         alias = "!git config --list | grep -e '^alias' | sed -e 's/alias\\.//' -e 's/=/\\t\\t/'"
         als = alias
-        rao = "!sh -c  '[ \"$1\" != \"\" ] && [ \"$2\" != \"\" ] && git remote add origin git@github.com:$1/$2.git' -"
-        remote-add-origin =arog
+        remote-add-origin = "!sh -c  '[ \"$1\" != \"\" ] && [ \"$2\" != \"\" ] && git remote add origin git@github.com:$1/$2.git' -"
+        rao = remote-add-origin
+        remote-show-origin = remote show origin
+        rso = remote-show-origin
         sw = "!git branch -a | fzf | xargs git checkout"
         branch-delete-merged = "!f () { git checkout $1; git branch --merged|egrep -v '\\*|develop|main|master'|xargs git branch -d; };f"
         worktree-new = "!bash -c 'git worktree add ~/git-worktree/$(dirname $(pwd))-$1' $1"
         latest-merged-commit = "!git log --oneline | grep -E '^[0-9a-z]+ Merge pull request #' | head -1 | awk '{print $1}'"
         open-editing = "!bash -c 'git diff --name-only `git latest-merged-commit` | cat | xargs code'"
-        oe = "open-editing"
+        oe = open-editing
         r = "!git reflog -n 50 --pretty='format:%gs' | perl -anal -e '$seen{$1}++ or print $1 if /checkout:.*to (.+)/'"
         ls-files-all-history = "!git log --oneline | awk '{ print $1 }' | xargs -I{} git ls-tree -r --name-only {} | sort | uniq"
+        reflog-verbose = log -g
+        vv = branch -vv
