--- a/.config/git/config
+++ b/.config/git/config
@@ -20,7 +20,7 @@
         c = "commit -v"
         d = diff
         di = "diff --ignore-all-space"
-        ds = "di --staged"
+        ds = "diff --ignore-all-space --staged"
         ps = "!git push origin $(git rev-parse --abbrev-ref HEAD)"
         pl = "!git pull origin $(git rev-parse --abbrev-ref HEAD)"
         l = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
@@ -43,5 +43,5 @@
         ls-files-all-history = "!git log --oneline | awk '{ print $1 }' | xargs -I{} git ls-tree -r --name-only {} | sort | uniq"
         reflog-verbose = log -g
         vv = branch -vv
-        diff-from-release = "!git di `git latest-merged-commit` --ignore-all-space"
+        diff-from-release = "!git diff --ignore-all-space `git latest-merged-commit` --ignore-all-space"
         dfr = diff-from-release
