--- a/.config/git/config
+++ b/.config/git/config
@@ -40,6 +40,7 @@
         open-editing = "!bash -c 'git diff --name-only `git latest-merged-commit` | cat | xargs code'"
         oe = open-editing
         r = "!git reflog -n 50 --pretty='format:%gs' | perl -anal -e '$seen{$1}++ or print $1 if /checkout:.*to (.+)/'"
+        rsw = "!git reflog -n 50 --pretty='format:%gs' | perl -anal -e '$seen{$1}++ or print $1 if /checkout:.*to (.+)/' | fzf | xargs git checkout"
         ls-files-all-history = "!git log --oneline | awk '{ print $1 }' | xargs -I{} git ls-tree -r --name-only {} | sort | uniq"
         reflog-verbose = log -g
         vv = branch -vv
