use hackgen-nerd

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,8 +1,8 @@
 font:
   normal:
-    family: HackGen Console
+    family: HackGen Console NFJ
     style: Regular
   bold:
-    family: HackGen Console
+    family: HackGen Console NFJ
     style: Bold
   size: 18.0
