--- a/.config/git/config
+++ b/.config/git/config
@@ -53,3 +53,5 @@
 	diff-from-prev-head = "!git diff --ignore-all-space HEAD^"
 	dfr = diff-from-release
 	dfp = diff-from-prev-head
+[ghq]
+	root = ~/src
