Use macOS clipboard in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -131,3 +131,23 @@ set-window-option -g window-status-current-format "#[bg=colour214,fg=colour237,n
 set-window-option -g window-status-format "#[bg=colour239,fg=colour237,noitalics]#[bg=colour239,fg=colour223] #I #[bg=colour239,fg=colour223] #W #[bg=colour237,fg=colour239,noitalics]"
 
 # vim: set ft=tmux tw=0 nowrap:
+
+# --- copy mode ---
+
+# Mac OS X pasteboardを使用できるようにする
+# set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+# コピーモードでvimキーバインドを使う
+# setw -g mode-keys vi
+
+# 'v' で選択を始める
+# bind-key -T copy-mode-vi v send-keys -X begin-selection
+# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
+# `Enter` でもcopy-pipeを使う
+# unbind -T copy-mode-vi Enter
+# bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
+# ']' でpbpasteを使う
+# bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+bind -T copy-mode Enter send-keys -X copy-pipe-and-cancel "pbcopy"
